--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,16 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/**/*.js", 
-      "use": "@vercel/node" 
+      "src": "api/index.js",
+      "use": "@vercel/node"
     }
   ],
-  "functions": {
-    "src/api/**.js": {
-      "runtime": "nodejs18.x" 
-    }
-  },
   "routes": [
-    { "src": "/api/(.*)", "dest": "/src/api/$1" } 
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.js"
+    }
   ]
 }
