In backend uploadToCloudinary function added and successfully worked after tested in postman

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,7 @@
 MONGO_URL = "mongodb+srv://gourabdas10122000:%23Gourabdas10122000@cluster0.syxps.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 PORT = 4000
+Razorpay_key_id = rzp_test_L89ejF4PhzZPu5
+Razorpay_key_secret = WOEFfoPe5TKGGF3wyG8ILXja
+CLOUDINARY_CLOUD_NAME = dcvmhiqkk
+CLOUDINARY_API_KEY = 238696742426871
+CLOUDINARY_API_SECRET = 2rvCnvucXp2RQTYTzthE9YNUqtk
