fontend is successfully connected with backend and it is good to go locally. But in production it may be crashed and error needs to be fixed if occurrs

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,3 @@
-VITE_URL = http://localhost:4000/api/
+VITE_LOCAL_URL = http://localhost:4000/api/
+VITE_PROD_URL = https://demo-web-feature-backend.vercel.app/api/
+VITE_FONTEND_PROD_URL = https://demo-web-feature-fontend.vercel.app/
